set flex 0 0 auto to try and fix overlap

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -36,6 +36,7 @@
     min-height: 180px;
     max-width: 384px;
     max-height: 384px;
+    flex: 0 0 auto;
 }
 
 .about-section-description {
